--- a/style.css
+++ b/style.css
@@ -1,39 +1,34 @@
-/* =============================================================================
-   HTML5 CSS Reset Minified - Eric Meyer
-   ========================================================================== */
+/* -------------------------------------------------------------------------- */
+/* DEFAULT CONFIGURATIONS */
+body{
+  background-color: #21192E;
+  width: 100%;
+  margin: 0;
+}
 
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
-body{line-height:1}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-nav ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:before,blockquote:after,q:before,q:after{content:none}
-a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration:none}
-mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
-del{text-decoration:line-through}
-abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
-table{border-collapse:collapse;border-spacing:0}
-hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
-input,select{vertical-align:middle}
+a{
+  text-decoration:none;
+}
 
 h3{
 	font-size: 18px;
 	font-family: courier;
 	font-weight: lighter;
 }
-
-/* =============================================================================
-   My CSS
-   ========================================================================== */
-
-/* ---- base ---- */
+/* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- */
-/* PROJECT DEMO HEADLINE */
+/* ROOT CONTAINER */
+.mass_container{
+  display: inline;
+}
+/* -------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------- */
+/* PROJECT DEMO AND CERTIFICATIONS HEADLINE */
 .proj_demo_cert_container{
-	position: absolute;
 	width: 100%;
-	margin-top: 181.5%;
+	min-width: 1080px;
 	display: flex;
 }
 
@@ -55,48 +50,34 @@ h3{
 /* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- */
-/* VIDEO CARDS */
+/* PROJECT DEMOS AND CERTIFICATIONS BOX */
+.separator_two{
+  height: 370px;
+  width: 2px;
+  background-color: #c5c5c5;
+}
+
 .demos_container{
-	position: absolute;
-	margin-top: 190%;
 	display: flex;
 	width: 100%;
+	min-width: 1080px;
+  background-color: white;
 }
 
-.certs_card_img{
-	width: 150px;
-}
-
-.certs_card{
-	margin-left: 5%;
-	margin-top: 10%;
-	margin-bottom: 5%;
-}
-
-.certs_container{
-	display: flex;
-	overflow: auto;
-	white-space: nowrap;
-	margin-left: 50px;
-	margin-right: 50px;
-	width: 90%;
-}
-
-.scrollmenu {
+.scrollmenu{
   display: flex;
   overflow: auto;
   white-space: nowrap;
-	margin-left: 50px;
-	margin-right: 50px;
-	width: 45%;
+  width: 48.5%;
+  margin-right: 2%;
 }
 
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	margin-left: 15px;
-	margin-right: 15px;
 	margin-bottom: 10%;
+	margin-top: 10%;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -107,45 +88,54 @@ h3{
 .card_title{
 	text-align: center;
 	margin-top: 2px;
-	margin-bottom: 2px;
+	margin-bottom: 6px;
 	font-family: verdana;
 	font-weight: lighter;
 }
+
+.certs_scrollmenu{
+  display: flex;
+  overflow: auto;
+  white-space: nowrap;
+  width: 50%;
+}
+
+.certs_card_img{
+	width: 150px;
+  margin-top: 55%;
+}
+
+.certs_card_title{
+  font-family: verdana;
+  font-size: 14px;
+}
+
+.certs_card{
+  margin-left: 12%;
+}
 /* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- */
-/* EDUCATION AND SKILLS LINE SEPARATOR */
+/* EDUCATION TIMELINE AND SKILLS LIST */
+.edu_skill_container{
+  display: flex;
+  width: 100%;
+  height: 600px;
+  min-width: 1080px;
+  background-color: white;
+}
+
 .separator{
-	position: absolute;
-	margin-left: 50%;
-	height: 450px;
+  height: 560px;
 	width: 2px;
-	background-color: #336;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* DEVEOPED BY TEXT */
-.dev_by{
-	position: absolute;
-	margin-left: 5%;
-	margin-top: 5%;
+	background-color: #c5c5c5;
 }
 
-.dev_by_text{
-	font-family: verdana;
-	color: #c5c5c5;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* SKILLS LIST */
-.prog_container_two{
-	margin-left: 100%
+.edu_list{
+  width: 50%;
 }
 
 .meter {
-	margin-top: 5px;
   height: 3px;
   position: relative;
   background: #E0ECF8;
@@ -163,94 +153,48 @@ h3{
 
 .skillset{
 	list-style: none;
+  margin-top: -15%;
+}
+
+.skill_one{
+	margin-left: 25%;
+}
+
+.skill_two{
+	margin-left: 15%;
 }
 
 .skill_list{
-	margin-left: 50%;
-	margin-top: 2%;
-	display: flex;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* EDUCATION AND SKILLS HEADLINE */
-.edu_skill_container{
-	display: flex;
-	width: 100%;
-	margin-top: 139%;
-	position: absolute;
-	background-color: white;
-	padding-top: 2%;
-	padding-bottom: 6%;
+  margin-top: 2%;
+  display: flex;
+  width: 33.3%;
 }
 
-.edu_head_container{
-	position: absolute;
-	width: 100%;
-	margin-top: 136%;
-	display: flex;
-}
-
-.edu_header{
-	color: white;
-	width: 50%;
-	text-align: center;
-	font-size: 36px;
-	font-family: verdana;
-}
-
-.skill_header{
-	color: white;
-	width: 50%;
-	text-align: center;
-	font-size: 36px;
-	font-family: verdana;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* EXPERIENCE HEADLINE */
-.exp_header{
-	color: white;
-	text-align: center;
-	font-size: 36px;
-	font-family: verdana;
-}
-
-.exp_head_container{
-	position: absolute;
-	width: 100%;
-	margin: 0 auto;
-	margin-top: 60%;
-}
-/* -------------------------------------------------------------------------- */
-
-/* -------------------------------------------------------------------------- */
-/* TIMELINE FOR EDUCATION */
 .timeline_edu{
-	position: relative;
-  padding:40px 0;
-	width: 100%;
-	margin-left: 50%;
+  width:100%;
+	min-width: 1080px;
   box-sizing:border-box;
 }
 /* timeline vertical line */
 .timeline_edu:before{
   content:'';
   position: absolute;
-  left:115%;
+  left: 25.5%;
   width:2px;
-  height:80%;
+  height:30%;
   background:#c5c5c5;
 }
 .timeline_edu ul{
   padding:0;
   margin:0;
+  min-width: 1080px;
+  padding-top: 5%;
 }
 .timeline_edu ul li{
   list-style:none;
   position:relative;
-  width:100%;
+  width:50%;
+  padding:20px 40px;
   box-sizing:border-box;
 }
 .timeline_edu ul li:nth-child(odd){
@@ -266,16 +210,16 @@ h3{
 .content{
   padding-bottom:20px;
 	color: black;
-	font-size: 12px;
+	font-size: 14px;
 }
 .timeline_edu ul li:nth-child(odd):before
 {
   content:'';
-  position:absolute;
+  position: absolute;
   width:10px;
   height:10px;
   top:24px;
-	right: -38px;
+  right:-5px;
 	background-color: #337;
 	box-shadow: #339;
   border-radius:50%;
@@ -287,7 +231,7 @@ h3{
   width:10px;
   height:10px;
   top:24px;
-  left:-4px;
+  left:-5px;
 	background-color: #337;
 	box-shadow: #339;
   border-radius:50%;
@@ -298,15 +242,21 @@ h3{
   margin:0;
   color: #339;
   font-weight:600;
+  font-size: 18px;
 }
 .timeline_edu ul li p{
-  margin:10px 0 0;
+  margin:20px 0 0;
   padding:0;
+  font-family: verdana;
+  font-size: 10px;
+  font-weight: lighter;
 }
 .timeline_edu ul li .time h4{
   margin:0;
   padding:0;
   font-size:14px;
+  font-family: verdana;
+  font-weight: normal;
 }
 /* box date */
 .timeline_edu ul li:nth-child(odd) .time
@@ -333,13 +283,8 @@ h3{
   color:#fff;
   border-radius:18px;
 }
-@media(max-width:1000px)
-{
-  .timeline{
-    width:100%;
-  }
-}
-@media(max-width:767px){
+
+@media(max-width:4000px){
   .timeline_edu{
     width:100%;
     padding-bottom:0;
@@ -349,56 +294,80 @@ h3{
     text-align:center;
   }
   .timeline_edu:before{
-    left:20px;
-    height:100%;
+    left:254px;
+    height:65%;
   }
   .timeline_edu ul li:nth-child(odd),
   .timeline_edu ul li:nth-child(even)
   {
     width:100%;
     text-align:left;
-    padding-left:50px;
+    padding-left:300px;
     padding-bottom:50px;
+    top: 50px;
   }
   .timeline_edu ul li:nth-child(odd):before,
   .timeline_edu ul li:nth-child(even):before
   {
     top:-18px;
-    left:16px;
+    left:250px;
   }
   .timeline_edu ul li:nth-child(odd) .time,
   .timeline_edu ul li:nth-child(even) .time{
     top:-30px;
-    left:50px;
+    left:300px;
     right:inherit;
   }
 }
+/* -------------------------------------------------------------------------- */
 
+/* -------------------------------------------------------------------------- */
+/* EDUCATION AND SKILLS HEADLINE */
+.edu_head_container{
+  display: flex;
+  min-width: 1080px;
+  height: 120px;
+}
 
-/* TIMELINE FOR EXPERIENCE */
+.edu_header{
+	color: white;
+	width: 50%;
+	text-align: center;
+	font-size: 36px;
+	font-family: verdana;
+}
+
+.skill_header{
+	color: white;
+	width: 50%;
+	text-align: center;
+	font-size: 36px;
+	font-family: verdana;
+}
+/* -------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------- */
+/* EXPERIENCE TIMELINE */
 .timeline{
-  position:absolute;
-  margin:0 auto;
-  padding:40px 0;
-	padding-right: 20%;
-	padding-left: 20%;
   width:100%;
-	margin-top: 66%;
+	min-width: 1080px;
   box-sizing:border-box;
 	background-color: white;
 }
 /* timeline vertical line */
 .timeline:before{
   content:'';
-  position:absolute;
-  left:50%;
+  position: absolute;
+  left: 49.9%;
   width:2px;
-  height:90%;
+  height:100%;
   background:#c5c5c5;
 }
 .timeline ul{
   padding:0;
   margin:0;
+  min-width: 1080px;
+  padding-top: 5%;
 }
 .timeline ul li{
   list-style:none;
@@ -425,11 +394,11 @@ h3{
 .timeline ul li:nth-child(odd):before
 {
   content:'';
-  position:absolute;
+  position: absolute;
   width:10px;
   height:10px;
   top:24px;
-  right:-6px;
+  right:-5px;
 	background-color: #337;
 	box-shadow: #339;
   border-radius:50%;
@@ -441,7 +410,7 @@ h3{
   width:10px;
   height:10px;
   top:24px;
-  left:-4px;
+  left:-5px;
 	background-color: #337;
 	box-shadow: #339;
   border-radius:50%;
@@ -452,15 +421,21 @@ h3{
   margin:0;
   color: #339;
   font-weight:600;
+  font-size: 18px;
 }
 .timeline ul li p{
-  margin:10px 0 0;
+  margin:20px 0 0;
   padding:0;
+  font-family: verdana;
+  font-size: 10px;
+  font-weight: lighter;
 }
 .timeline ul li .time h4{
   margin:0;
   padding:0;
   font-size:14px;
+  font-family: verdana;
+  font-weight: normal;
 }
 /* box date */
 .timeline ul li:nth-child(odd) .time
@@ -487,13 +462,8 @@ h3{
   color:#fff;
   border-radius:18px;
 }
-@media(max-width:1000px)
-{
-  .timeline{
-    width:100%;
-  }
-}
-@media(max-width:767px){
+
+@media(max-width:1080px){
   .timeline{
     width:100%;
     padding-bottom:0;
@@ -530,101 +500,121 @@ h3{
 /* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- */
-/* PERSONAL IMAGE + PERSONAL BRIEF INFORMATION */
-.container{
-	position: absolute;
-	display: flex;
-	padding-top: 4%;
-	padding-bottom: 4%;
-	width: 100%;
-	margin: 0 auto;
-	margin-top: 30%;
-	background-color: white;
+/* EXPERIENCE HEADLINE */
+.exp_head_container{
+  height: 80px;
+  min-width: 1080px;
 }
 
-.profile_image{
-	float: right;
-	border: 2px solid #335;
-}
-
-.button_container{
-	margin-top: 20%;
+.exp_header{
+  color: white;
+	text-align: center;
+	font-size: 36px;
 	font-family: verdana;
+}
+/* -------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------- */
+/* PERSONAL INFORMATION BOX */
+.personal_container{
+  display: flex;
+  background-color: white;
+  min-width: 1080px;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .img_container{
-	margin-left: 10%;
-	margin-right: 5%;
+  width: 15%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.about_me_specifics{
-	margin-left: 5%;
+.about_me_container{
+  width: 40%;
+  margin-right: 5%;
 }
 
-.dl_cv{
-	float: left;
-	color: white;
-	text-align: center;
-	padding: 11px;
-	font-size: 14px;
-	background-color: #337;
-	margin-top: 2%;
-}
-
-.linkedin_a{
-	margin-left: 2px;
-	float: left;
-  color: white;
-  text-align: center;
-  padding: 11px;
-  font-size: 14px;
-	background-color: #337;
-	margin-top: 2%;
+.about_me_specifics_container{
+  width: 40%;
 }
 
 .about_me_text{
-	margin-bottom: 5%;
-	font-size: 18px;
+  font-size: 18px;
 	color: black;
 	font-family: verdana;
+  font-weight:normal;
 }
 
 .about_me_summary{
-	font-size: 14px;
+  font-size: 12px;
 	color: black;
 	font-family: verdana;
+  margin-top: 10%;
 }
 
 .about_me_summary_two{
-	font-size: 14px;
+	font-size: 12px;
 	color: black;
 	font-family: verdana;
 	list-style: none;
+  margin-top: 10%;
+}
+
+.button_container{
+  margin-top: 10%;
+  margin-left: 7%;
+}
+
+.button_container a{
+  font-family: verdana;
+  float: left;
+	color: white;
+	text-align: center;
+	padding: 11px;
+  margin-left: 1%;
+	font-size: 14px;
+	background-color: #337;
 }
 /* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- */
-/* AUTHOR NAME + JOB TITLE */
+/* HEADLINE CONTAINER */
+.headline_container{
+  display: flex;
+  height: 400px;
+  min-width: 1080px;
+}
+
+.dev_by{
+  width: 27%;
+  margin-left: 5%;
+  margin-top: 2%;
+}
+
+.dev_by_text{
+	font-family: verdana;
+	color: #c5c5c5;
+  font-size: 12px;
+}
+
+.author_headline_container{
+  width: 73%;
+  margin-top: 12%;
+}
+
 .author_name{
-	position: absolute; /* remove background overlay */
-	width: 100%;
-	margin: 0 auto;
-	text-align: center;
-	font-size: 36px;
-	margin-top: 15%;
+  font-size: 36px;
 	color: white;
 	font-family: verdana;
 }
 
 .author_job{
-	position: absolute; /* remove background overlay */
-	width: 100%;
-	margin: 0 auto;
-	text-align: center;
-	font-size: 14px;
-	margin-top: 19%;
-	color: white;
-	font-family: verdana;
+  font-size: 14px;
+  color: white;
+  font-family: verdana;
+  margin-left: 15%;
+  margin-top: 1%;
 }
 /* -------------------------------------------------------------------------- */
 
@@ -634,6 +624,8 @@ h3{
 .topnav {
   background-color: white;
   overflow: hidden;
+	width: 100%;
+	min-width: 1080px;
 }
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -651,72 +643,3 @@ h3{
   color: white;
 }
 /* -------------------------------------------------------------------------- */
-
-html,body{
-	width:100%;
-	height:100%;
-}
-
-html{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body{
-  font:normal 75% Arial, Helvetica, sans-serif;
-}
-
-canvas{
-  display:block;
-  vertical-align:bottom;
-}
-
-
-/* ---- stats.js ---- */
-
-.count-particles{
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles{
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles{
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
-}
-
-#stats{
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-
-.count-particles{
-  border-radius: 0 0 3px 3px;
-}
-
-
-/* ---- particles.js container ---- */
-
-#particles-js{
-	height: 2660px;
-  background-color: #21192E;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
