--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 /* -------------------------------------------------------------------------- */
 /* DEFAULT CONFIGURATIONS */
-body{
-  background-color: #21192E;
-  width: 100%;
-  margin: 0;
-}
 
 a{
   text-decoration:none;
@@ -15,7 +10,56 @@ h3{
 	font-family: courier;
 	font-weight: lighter;
 }
+
+body {
+	color: #fff;
+	background: linear-gradient(-45deg, #335, #336, #336, #339);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+  background-color: #21192E;
+  width: 100%;
+  margin: 0;
+}
+
 /* -------------------------------------------------------------------------- */
+/* BACKGROUND GRADIENT COLOR ANIMATION */
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
 
 /* -------------------------------------------------------------------------- */
 /* ROOT CONTAINER */
